# win-pilot-mcp

./: .gitignore  README.md  pyproject.toml
src/win_pilot_mcp/: __init__.py  config.py  types.py
src/win_pilot_mcp/agent/: __init__.py  app_profiles.py  desktop_model.py  recovery.py
src/win_pilot_mcp/executor/: __init__.py  computer.py  keyboard.py  mouse.py  windows.py
src/win_pilot_mcp/logs/: event_logger.py
src/win_pilot_mcp/mcp/: __init__.py  server.py
src/win_pilot_mcp/memory/: store.py
src/win_pilot_mcp/permissions/: __init__.py  manager.py
src/win_pilot_mcp/planner/: __init__.py  engine.py
src/win_pilot_mcp/screenshots/: __init__.py  capture.py
src/win_pilot_mcp/tools/: __init__.py  service.py
src/win_pilot_mcp/vision/: __init__.py  analyzer.py  annotations.py  detectors.py  finder.py  ocr.py  providers.py  similarity.py
src/win_pilot_mcp/workflows/: __init__.py  human_demo.py  recorder.py
tests/: test_executor.py  test_finder.py  test_permissions.py  test_planner.py  test_similarity.py  test_types.py
