[project]
name = "win-pilot-mcp"
version = "0.1.0"
description = "Windows computer-use MCP server driven only by screenshots, computer vision, OCR, mouse, keyboard, and window management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "pydantic>=2.0",
  "pyautogui>=0.9.54",
  "pygetwindow>=0.0.9",
  "pynput>=1.7.6",
  "pytesseract>=0.3.10",
  "mss>=9.0",
]

[project.optional-dependencies]
vision = [
  "paddleocr>=2.7",
  "ultralytics>=8.0",
  "torch>=2.0",
  "transformers>=4.40",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
win-pilot-mcp = "win_pilot_mcp.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/win_pilot_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
